2022-08-11 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2022-08-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs that broke the 'make deb' target.