@@ -1,11 +1,13 @@
 ## automake.am
 ##
-## Automake.am for lwmon debian/source
+## Automake.am for pxruler debian/source
 ##
-##   (C) Copyright 2021 Fred Gleason <fredg@paravelsystems.com>
+##   (C) Copyright 2022 Fred Gleason <fredg@paravelsystems.com>
 ##
 ##   All rights reserved.
 ##
 ## Use automake to process this into a Makefile.in
 
 EXTRA_DIST = format
+
+MAINTAINERCLEANFILES = Makefile.in
